@@ -263,8 +263,8 @@ JDK1.7以及以上：false false
 ### JDK1.6
 ![](http://ojoba1c98.bkt.clouddn.com/img/jvm/jdk6-intern.png)
 在JDK1.6中所有的输出结果都是 false，因为JDK1.6以及以前版本中，常量池是放在 Perm 区（属于方法区）中的，熟悉JVM的话应该知道这是和堆区完全分开的。
-使用**引号声明的字符串都是会直接在字符串常量池**中生成的，而 **new 出来的 String 对象是放在堆空间中的**。所以两者的内存地址肯定是不相同的，即使调用了intern()方法也是不影响的。如果不清楚String类的“==”和equals()的区别可以查看这篇博文***[Java面试——从Java堆、栈角度比较equals和==的区别](http://blog.csdn.net/seu_calvin/article/details/52089040)***。
-`intern()`方法在JDK1.6中的**作用**是：比如`String s = new String("SEU_Calvin")`，再调用`s.intern()`，此时返回值还是字符串`"SEU_Calvin"`，表面上看起来好像这个方法没什么用处。但实际上，在JDK1.6中它做了个小动作：检查字符串池里**是否存在"SEU_Calvin"这么一个字符串**，如果存在，就返回池里的字符串；如果不存在，该方法会把`"SEU_Calvin"`添加到字符串池中，然后再返回它的引用。然而在JDK1.7中却不是这样的，后面会讨论。
+使用**引号声明的字符串都是会直接在字符串常量池**中生成的，而 **new 出来的 String 对象是放在堆空间中的**。所以两者的内存地址肯定是不相同的，即使调用了`intern()`方法也是不影响的。如果不清楚String类的`“==”`和`equals()`的区别可以查看这篇博文***[Java面试——从Java堆、栈角度比较equals和==的区别](http://blog.csdn.net/seu_calvin/article/details/52089040)***。
+`intern()`方法在JDK1.6中的**作用**是：比如`String s=new String("SEU_Calvin")`，再调用`s.intern()`，此时返回值还是字符串`"SEU_Calvin"`，表面上看起来好像这个方法没什么用处。但实际上，在JDK1.6中它做了个小动作：检查字符串池里**是否存在`"SEU_Calvin"`这么一个字符串**，如果存在，就返回池里的字符串；如果不存在，该方法会把`"SEU_Calvin"`添加到字符串池中，然后再返回它的引用。然而在JDK1.7中却不是这样的，后面会讨论。
 
 ## JDK1.7
 针对JDK1.7以及以上的版本，我们将上面两段代码分开讨论。先看第一段代码的情况：
@@ -417,14 +417,323 @@ Object obj = new Object();
 程序可以通过判断引用队列中是否已经加入了虚引用，来了解被引用的对象是否将要被垃圾回收。
 （由于`Object.finalize()`方法的不安全性、低效性，常常使用虚引用完成对象回收前的资源释放工作。）
 这里特别需要注意：当JVM将虚引用插入到引用队列的时候，虚引用执行的对象内存还是存在的。但是PhantomReference并没有暴露API返回对象。所以如果我想做清理工作，需要继承PhantomReference类，以便访问它指向的对象。如NIO直接内存的自动回收，就使用到了sun.misc.Cleaner。
+
+## 典型的垃圾回收算法
+
+在确定了哪些垃圾可以被回收后，垃圾收集器要做的事情就是开始进行垃圾回收，但是这里面涉及到一个问题是：**如何高效地进行垃圾回收**。
+下面讨论几种常见的**垃圾收集算法**。
+
+### Mark-Sweep（标记-清除）算法
+标记-清除算法分为两个阶段：标记阶段和清除阶段。
+**标记阶段**的任务是标记出所有需要被回收的对象，**清除阶段**就是回收被标记的对象所占用的空间。
+标记-清除算法实现起来比较容易，但是有一个比较严重的问题就是**容易产生内存碎片**，碎片太多可能会导致后续过程中需要为大对象分配空间时无法找到足够的空间而提前触发GC。
+
+### Copying（复制）算法
+Copying算法将可用内存**按容量划分为大小相等的两块**，**每次只使用其中的一块**。当这一块的内存用完了，就**将还存活着的对象复制到另外一块上面**，然后再把第一块内存上的空间一次清理掉，这样就**不容易出现内存碎片**的问题，并且**运行高效**。
+但是该算法导致**能够使用的内存缩减到原来的一半**。而且，该算法的**效率跟存活对象的数目多少有很大的关系**，如果存活对象**很多**，那么Copying算法的**效率将会大大降低**。（这也是为什么后面提到的新生代采用Copying算法）
+
+## Mark-Compact（标记-整理）算法
+为了解决Copying算法的缺陷，充分利用内存空间，提出了Mark-Compact算法。
+该算法标**记阶段标**记出所有需要被回收的对象，但是在完成标记之后不是直接清理可回收对象，而是**将存活的对象都移向一端**，然后**清理掉端边界以外的所有内存**（**只留下存活对象**）。
+
+## Generational Collection（分代收集）算法
+**分代收集算法**是目前大部分JVM的垃圾收集器采用的算法。
+它的核心思想是**将堆区划分为老年代（Tenured Generation）和新生代（Young Generation）**，老年代的特点是每次垃圾收集时只有**少量**对象需要被回收，而新生代的特点是每次垃圾回收时都有**大量**的对象需要被回收，那么就可以在**不同代的采取不同的最适合的收集算法**。
+
+目前大部分垃圾收集器对于**新生代都采取Copying算法**，因为新生代中每次垃圾回收都要**回收大部分对象**，也就是说需要**复制的操作次数较少**，该算法效率在新生代也较高。但是实际中并不是按照1：1的比例来划分新生代的空间的，一般来说是将新生代划分为**一块较大的Eden空间**和**两块较小的Survivor空间**，**每次使用Eden空间和其中的一块Survivor空间**，当进行回收时，将还存活的对象复制到另一块Survivor空间中，然后清理掉Eden和A空间。在进行了第一次GC之后，使用的便是Eden space和**B空间**了，下次GC时会将存活对象复制到**A空间**，如此**反复循环**。
+
+当对象在**Survivor区**躲过一次GC的话，其**对象年龄便会加1**，默认情况下，**对象年龄达到15时**，就会**移动到老年代中**。一般来说，大对象会被直接分配到老年代，所谓的大对象是指需要大量连续存储空间的对象，最常见的一种大对象就是大数组，比如：`byte[]` `data` `=` `new` `byte[4*1024*1024]`。
+当然分配的规则并不是百分之百固定的，这要取决于当前使用的是哪种垃圾收集器组合和JVM的相关参数。这些**搬运工作都是GC完成的**，GC不仅负责在Heap中搬运实例，同时负责回收存储空间。
+最后，因为每次回收都只回收少量对象，所以**老年代一般使用的是标记整理算法**。
+
+**注意**，在方法区中有一个**永久代**（Permanet Generation），它用来存储class类、常量、方法描述等。对永久代的回收主要回收两部分内容：**废弃常量**和**无用的类**。
+![](http://ojoba1c98.bkt.clouddn.com/img/jvm/java-heap-memory.png)
+有关查看垃圾回收信息的JVM常见配置方式：
+```
+-XX:+PrintGCDetails
+```
+最后介绍一下有关堆的JVM常见配置方式：
+```
+-Xss //选置栈内存的大小  
+-Xms: //初始堆大小  
+-Xmx: //最大堆大小  
+-XX:NewSize=n: //设置年轻代大小  
+-XX:NewRatio=n: //设置年轻代和年老代的比值。比如设置为3，表示年轻代与年老代比值为1：3  
+-XX:SurvivorRatio=n: //年轻代中Eden区与两个Survivor区的比值。注意Survivor区有两个。比如设置为3，表示Eden：Survivor=3：2，一个Survivor区占整个年轻代的1/5。  
+-XX:MaxPermSize=n: //设置持久代大小  
+```
+
+## 典型的垃圾回收器
+垃圾收集算法是内存回收的理论基础，而垃圾收集器就是内存回收的具体实现。
+下面介绍一下**HotSpot**（JDK 7)虚拟机提供的几种垃圾收集器，用户可以根据自己的需求组合出各个年代使用的收集器。
+
+### Serial&Serial Old
+`Serial`和`Serial Old`收集器是最基本最古老的收集器，是一个**单线程**收集器，并且在它进行垃圾收集时，必须**暂停所有用户线程**。`Serial`收集器是**针对新生代**的收集器，采用的是**Copying算法**，`Serial Old`收集器是针对**老年代的收集器**，采用的是**Mark-Compact算法**。它的优点是实现简单高效，但是缺点是会给用户带来停顿。
+
+### ParNew
+`ParNew`收集器是`Serial`收集器的**多线程版本**，使用多个线程进行垃圾收集。
+
+### Parallel Scavenge
+`Parallel Scavenge`收集器是一个**新生代的多线程收集器（并行收集器）**，它在回收期间**不需要暂停其他用户线程**，其采用的是**Copying算法**，该收集器与前两个收集器有所不同，它主要是为了达到一个**可控的吞吐量**。
+
+### Parallel Old
+`Parallel Old`是`Parallel Scavenge`收集器的**老年代版本（并行收集器）**，使用多线程和**Mark-Compact算法**。
+
+### CMS
+`CMS`（Current Mark Sweep）收集器是一种以**获取最短回收停顿时间**为目标的收集器，它是一种**并发**收集器，采用的是**Mark-Sweep算法**。
+
+### G1
+G1收集器是当今收集器技术发展最前沿的成果，它是一款**面向服务端应用**的收集器，它能充分利用**多CPU**、**多核**环境。因此它是一款**并行与并发**收集器，并且它能建立**可预测的停顿时间**模型。
+最后介绍一下有关收集器设置的JVM常见配置方式：
+```
+-XX:+UseSerialGC: //设置串行收集器  
+-XX:+UseParallelGC: //设置并行收集器  
+-XX:+UseParalledlOldGC: //设置并行年老代收集器  
+-XX:+UseConcMarkSweepGC: //设置并发收集器  
+//并行收集器设置  
+-XX:ParallelGCThreads=n: //设置并行收集器收集时使用的CPU数，并行收集线程数  
+-XX:MaxGCPauseMillis=n: //设置并行收集最大暂停时间  
+-XX:GCTimeRatio=n: //设置垃圾回收时间占程序运行时间的百分比，公式为1/(1+n)  
+//并发收集器设置  
+-XX:+CMSIncrementalMode: //设置为增量模式。适用于单CPU情况  
+-XX:ParallelGCThreads=n: //设置并发收集器年轻代收集方式为并行收集时，使用的CPU数。并行收集线程数 
+```
 # Java类加载机制总结
+## 类加载器的组织结构
+类加载器 `ClassLoader`是具有层次结构的，也就是父子关系。其中，**`Bootstrap`是所有类加载器的父亲**。
+（1）`Bootstrapclass loader`： **启动类加载器**
+当运行Java虚拟机时，这个类加载器被创建，它负责加载虚拟机的**核心类库**，如`java.lang.*`等。
+（2）`Extensionclass loader`：**标准扩展类加载器**
+用于加载除了基本 API之外的一些拓展类。
+（3）`AppClassLoader`：加载应用程序和程序员**自定义的类**。
+运行下面的程序，结果也显示出来了：
+![](http://ojoba1c98.bkt.clouddn.com/img/jvm/classlodertest.png)
+从运行结果可以看出加载器之间的**父子关系**，`ExtClassLoader`的父`Loader`返回了null
+原因是`BootstrapLoader`（启动类加载器）是用**`C`语言实现**的，找不到一个确定的返回父`Loader`的方式。
+
+## 类的加载机制
+类被加载到虚拟机内存包括**加载**、**链接**、**初始化**几个阶段。其中**链接又细化分为验证**、**准备**、**解析**。
+这里需要注意的是，解析阶段在某些情况下可以在初始化阶段之后再开始，这是为了支持Java的运行时绑定。各个阶段的作用整理如下：
+
+### 加载阶段
+**加载阶段**可以使用系统提供的**类加载器**(ClassLoader)来完成，也可以由用户**自定义的类加载器**完成，开发人员可以通过定义类加载器去**控制字节流的获取方式**。
+（1）通过类的**全名**产生对应类的**二进制数据流**（注意，若未找到该类文件，只有在类**实际使用时**才**抛出**错误）。
+（2）分析并将这些二进制数据流转换为**方法区的运行时数据结构**。
+（3）创建代表这个类的`java.lang.Class`对象。作为方法区这些数据的访问入口。
+
+### 链接阶段（实现 Java 的动态性的重要一步）
+（1）**验证**：主要的目的是确保class文件的字节流中包含的信息符合当前虚拟机的要求，并且**不会危害虚拟机自身安全**。验证点可能包括：class文件格式规范、这个类是否继承了不允许被继承的类(被final修饰的)、如果这个类的父类是抽象类，是否实现了起父类或接口中要求实现的所有方法、不能把一个父类对象赋值给子类数据类型、方法的访问性(private、protected、public、default)是否可被当前类访问等等。
+（2）**准备**：准备阶段为**类的成员变量分配内存空间**并设置类变量**初始值**的阶段，这些变量所使用的内存都在**方法区**中分配。**所有原始类型的值都为0**。如`float`为0f、 `int`为0、`boolean`为0、引用类型为`null`。
+（3）**解析**：解析阶段是把虚拟机中**常量池的符号引用**替换为**直接引用**的过程。
+
+### 初始化
+类初始化时类加载的最后一步，前面除了**加载阶段用户可以通过自定义类加载器参与**以外，其余都是**虚拟机**主导和控制。到了初始化阶段，才是**真正执行类中定义Java程序代码**。初始化阶段，**根据程序中的定制**，**初始化类变量**。
+**初始化过程其实是执行类构造器方法的过程**。
+（**类构造器方法是由编译器自动收集类中所有类变量的赋值动作和静态语句块中的语句合并产生的**。）
+```
+//静态语句块中只能访问定义在静态语句块之前的变量，定义在它之后的变量可以赋值，但不能访问  
+public class Test{  
+    static{  
+        i=0;//給变量赋值，可以通过编译  
+        System.out.print(i);//这句编译器会提示非法向前引用  
+    }  
+    static int i=1;  
+}  
+```
+**初始化过程会被触发执行的条件汇总**：
+（1）使用`new`关键字**实例化对象**、读取或设置一个类的**静态字段**（被final修饰、已在编译器把结果放入常量池的静态字段除外）的时候，以及调用类的**静态方法*的时候。
+（2）**对类进行反射调用**的时候。
+（3）当初始化一个类的时候，如果发现其**父类还没有进行过初始化**，则进行**父类的初始化**。
+（4）JVM启动时，用**户指定执行的主类**（包含main方法所在类），虚拟机会先初始化这个类。
+
+【**关于构造器方法拓展知识**】（可以不看）
+（1）类构造器`<clinit>()`方法与**类的构造函数不同**，它不需要**显式**调用父类构造，虚拟机会保证在子类`<clinit>()`方法执行之前，父类的`<clinit>()`方法已经执行完毕。因此在虚拟机中的**第一个执行的`<clinit>()`方法的类肯定是`java.lang.Object`**。
+（2）由于父类的`<clinit>()`方法先执行，也就意味着父类中定义的**静态语句块要优先于子类的变量赋值**操作。
+（3）`<clinit>()`方法对于类或接口来说**并不是必须的**，如果一个类中**没有静态语句**，**也没有变量赋值的操作**，那么编译器可以不为这个类生成`<clinit>()`方法。
+（4）**接口中不能使用静态语句块**，和类不同的是，执行接口的`<clinit>()`方法**不需要先执行父接口**的`<clinit>()`方法。只有当父接口中定义的变量**被使用**时，父接口才会被初始化。另外，接口的**实现类在初始化**时也一样不会执行接口的`<clinit>()`方法。
+（5）虚拟机会保证一个类的`<clinit>()`方法**在多线程环境中被正确加锁和同步**，可能会导致阻塞。
+
+## 类的整个加载过程触发的的三种方式
+（1）由 `new` 关键字创建一个类的实例。
+（2）调用 `Class.forName()` 方法，通过反射加载类。
+（3）调用某个`ClassLoader`实例的`loadClass()`方法。
+
+三者的区别汇总如下：
+（1）方法1和2都是使用的**当前类加载器**（`this.getClass.getClassLoader`）。方法3由**用户指定类加载器**并且加载的类与当前类**分属不同的命名空间**。
+（2）方法1是**静态加载**，2、3是**动态加载**。
+（3）对于两种动态加载，区别如下。
+```java
+Class.forName(className);  
+//实际上是调用的是：  
+Class.forName(className, true, this.getClass().getClassLoader());//第二个参数设置Class被loading后是不是必须被初始化，默认初始化
+```
+```java
+ClassLoader.loadClass(className);  
+//实际上调用的是:  
+ClassLoader.loadClass(name, false);//第二个参数指Class是否被链接，默认为false 
+```
+**通过上面的描述，如果程序依赖于`Class`是否被初始化，就必须用`Class.forName(name)`了**
+
 # 自定义类加载器
+## 为什么需要自定义类加载器
+网上的大部分自定义类加载器文章，几乎都是贴一段实现代码，然后分析一两句自定义ClassLoader的原理。但是我觉得首先得把为什么需要自定义加载器这个问题搞清楚，因为如果不明白它的作用的情况下，还要去学习它显然是很让人困惑的。
+首先介绍自定义类的**应用场景**：
+（1）**加密**：Java代码可以轻易的被**反编译**，如果你需要把自己的代码进行**加密以防止反编译**，可以先将**编译后的代码**用某种**加密算法加密**，类加密后就不能再用Java的`ClassLoader`去加载类了，这时就需要**自定义`ClassLoader`**在加载类的时候**先解密类**，然后再加载。
+（2）**从非标准的来源加载代码**：如果你的字节码是放在数据库、甚至是在云端，就可以自定义类加载器，从指定的来源加载类。
+（3）**以上两种情况在实际中的综合运用**：比如你的应用需要**通过网络来传输 Java 类的字节码**，为了安全性，这些字节码经过了加密处理。这个时候你就需要自定义类加载器来从某个网络地址上读取加密后的字节代码，接着进行解密和验证，最后定义出在Java虚拟机中运行的类。
 
+## 双亲委派模型
+在实现自己的`ClassLoade`r之前，我们先了解一下系统是如何加载类的，那么就不得不介绍**双亲委派模型的特点和实现过程**。
+双亲委派模型**特点**：
+该模型要求除了顶层的`Bootstrapclassloader`启动类加载器外，其余的类加载器都应当**有自己的父类加载器**。子类加载器和父类加载器**不是**以继承（Inheritance）的关系来实现，而是**通过组合（Composition）关系**来**复用**父加载器的代码。
+```java
+//双亲委派模型的工作过程源码  
+protected synchronized Class<?> loadClass(String name, boolean resolve)  
+throws ClassNotFoundException  
+{  
+// First, check if the class has already been loaded  
+Class c = findLoadedClass(name);  
+if (c == null) {  
+try {  
+if (parent != null) {  
+c = parent.loadClass(name, false);  
+} else {  
+c = findBootstrapClassOrNull(name);  
+}  
+} catch (ClassNotFoundException e) {  
+// ClassNotFoundException thrown if class not found  
+// from the non-null parent class loader  
+//父类加载器无法完成类加载请求  
+}  
+if (c == null) {  
+// If still not found, then invoke findClass in order to find the class  
+//子加载器进行类加载   
+c = findClass(name);  
+}  
+}  
+if (resolve) {//判断是否需要链接过程，参数传入  
+resolveClass(c);  
+}  
+return c;  
+}  
+```
+双亲委派模型的工作过程如下：
+（1）代码中一开始的**判空**操作是当前 `ClassLoader`从自己已经加载的类中**查询是否此类已经加载**，如果已经加载则直接返回原来已经加载的类。（每个类加载器都有自己的加载缓存，当一个类被加载了以后就会放入缓存，等下次加载的时候就可以直接返回）
+（2）当前 `ClassLoader`的缓存中**没有找到被加载的类的时候**，它自己不会尝试去加载该类，而是**委托父类加载器去加载**，如代码`c` `=` `parent.loadClass(name, false)`所示（父类加载器采用**同样的策略**，递归了`loadClass`函数），首先查看自己的缓存，没有就**委托父类的父类去加载**，一直到 `BootStrap ClassLoader`。如代码所示，如果父加载器为空则默认使用启动类加载器（`BootStrap ClassLoader`）作为父加载器去加载，如代码`findBootstrapClassOrNull(name)`所示（为何父类为`BootStrap ClassLoader`会返回空，原因在***[Java类加载机制总结](#Java%E7%B1%BB%E5%8A%A0%E8%BD%BD%E6%9C%BA%E5%88%B6%E6%80%BB%E7%BB%93)***中介绍过了）。
+（3）如果**`BootStrapClassLoader`加载失败**（例如在`$JAVA_HOME/jre/lib`里未查找到该`class`），会使用`ExtClassLoader`来尝试加载； 若`ExtClassLoader`也加载失败，则会使用`AppClassLoader`来加载，如果`AppClassLoader`也加载失败，则会抛出`ClassNotFoundException`。**最后再调用当前加载器的`findClass()`方法进行加载**。
 
+双亲委派模型的**好处**：
+（1）主要是为了**安全性**，**避免用户自己编写的类动态替换Java的一些核心类**，比如 `String`。
+（2）同时也**避免重复加载**，因为 JVM中区分不同类，不仅仅是根据类名，相同的`class`文件被**不同的 `ClassLoader`加载就是不同的两个类**。
 
+## 自定义类加载器
+（1）从上面源码可以看出，在调用`loadClass`方法时，会先根据委派模型在父加载器中加载，如果加载失败，则会**调用自己的`findClass`方法来完成加载**。
+（2）因此我们自定义的类加载器只需要**继承ClassLoader，并覆盖findClass方法**。
+（3）下面是一个实际例子，在该例中我们用自定义的类加载器去加载我们事先准备好的class文件。
 
+### 自定义一个People.java类做例子
+```java
+public class People {  
+//该类写在记事本里，在用javac命令行编译成class文件，放在d盘根目录下  
+    private String name;  
+    public People() {}  
+  
+    public People(String name) {  
+        this.name = name;  
+    }  
+  
+    public String getName() {  
+        return name;  
+    }  
+  
+    public void setName(String name) {  
+        this.name = name;  
+    }  
+  
+    public String toString() {  
+        return "I am a people, my name is " + name;  
+    }  
+  
+}  
+```
 
+### 自定义类加载器
+自定义一个类加载器，需要继承**`ClassLoader`类，并实现`findClass`方法**。其中`defineClass`方法可以把二进制流字节组成的文件转换为一个`java.lang.Class`（只要二进制字节流的内容符合Class文件规范）。
+```java
+public class MyClassLoader extends ClassLoader  
+{  
+    public MyClassLoader()  
+    {  
+          
+    }  
+      
+    public MyClassLoader(ClassLoader parent)  
+    {  
+        super(parent);  
+    }  
+      
+    protected Class<?> findClass(String name) throws ClassNotFoundException  
+    {  
+        File file = new File("D:/People.class");  
+        try{  
+            byte[] bytes = getClassBytes(file);  
+            //defineClass方法可以把二进制流字节组成的文件转换为一个java.lang.Class  
+            Class<?> c = this.defineClass(name, bytes, 0, bytes.length);  
+            return c;  
+        }   
+        catch (Exception e)  
+        {  
+            e.printStackTrace();  
+        }  
+          
+        return super.findClass(name);  
+    }  
+      
+    private byte[] getClassBytes(File file) throws Exception  
+    {  
+        // 这里要读入.class的字节，因此要使用字节流  
+        FileInputStream fis = new FileInputStream(file);  
+        FileChannel fc = fis.getChannel();  
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();  
+        WritableByteChannel wbc = Channels.newChannel(baos);  
+        ByteBuffer by = ByteBuffer.allocate(1024);  
+          
+        while (true){  
+            int i = fc.read(by);  
+            if (i == 0 || i == -1)  
+            break;  
+            by.flip();  
+            wbc.write(by);  
+            by.clear();  
+        }  
+        fis.close();  
+        return baos.toByteArray();  
+    }  
+} 
+```
 
+### 在主函数里使用
+```java
+MyClassLoader mcl = new MyClassLoader();   
+Class<?> clazz = Class.forName("People", true, mcl);   
+Object obj = clazz.newInstance();  
+         
+System.out.println(obj);  
+System.out.println(obj.getClass().getClassLoader());//打印出我们的自定义类加载器 
+```
+
+### 运行结果
+![](http://ojoba1c98.bkt.clouddn.com/img/jvm/result.png)
+
+至此关于自定义`ClassLoader`的内容总结完毕。
+
+# 最后
+看了之后廓然开朗，学习了
+
+> **转载于：***
+> ***[http://blog.csdn.net/seu_calvin/article/details/51404589](http://blog.csdn.net/seu_calvin/article/details/51404589)***
+> ***[http://blog.csdn.net/seu_calvin/article/details/51892567](http://blog.csdn.net/seu_calvin/article/details/51892567)***
+> ***[http://blog.csdn.net/seu_calvin/article/details/52301541](http://blog.csdn.net/seu_calvin/article/details/52301541)***
 
 
 
